--- a/app/static/AngularJS/Templates/reference.html
+++ b/app/static/AngularJS/Templates/reference.html
@@ -41,8 +41,53 @@
                     Tipo Documento <i class="dropdown-caret"></i>
                 </button>
                 <ul class="dropdown-menu">
-                    <li ng-repeat="documento in tipoDocumentos" class="ng-scope"><a href="#" ng-click="selectTypeDoc(documento.idDocumento,documento.nombreDocumento)" class="ng-binding">{{documento.nombreDocumento}}</a></li>
+                    <li ng-repeat="documento in tipoDocumentos" class="ng-scope"><a href="#" class="ng-binding">{{documento.nombreDocumento}}</a></li>
                 </ul>
+            </div>
+        </div>
+        <div class="panel">
+            <div class="panel-heading">
+                <h3 class="panel-title">Facturas</h3>
+            </div>
+            <div class="panel-body">
+                <table id="facturasReferencia" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Serie</th>
+                            <th>Folio</th>
+                            <th>fecha Vencimiento</th>
+                            <th>Importe</th>
+                            <th>Saldo</th>
+                            <th>rfc Emisor</th>
+                            <th>Referencia</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="factura in facturas">
+                            <td>
+                                {{factura.serie}}
+                            </td>
+                            <td>
+                                {{factura.folio}}
+                            </td>
+                            <td>
+                                {{factura.fechaVencimiento | date:"dd/MM/yyyy" }}
+                            </td>
+                            <td>
+                                {{factura.importe | currency}}
+                            </td>
+                            <td>
+                                {{factura.saldo | currency}}
+                            </td>
+                            <td>
+                                {{factura.rfcEmisor}}
+                            </td>
+                            <td>
+                                <button class="btn btn-default btn-icon btn-circle" style="margin-left:35%;" data-toggle="modal" data-target="#demo-default-modal" ng-click="generateReference(factura.serie,factura.folio)"><i class="demo-pli-monitor-2 icon-lg"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -128,51 +173,154 @@
         </div>
         <!--===================================================-->
         <!--End Block Styled Form -->
-
     </div>
     <!-- Termina panel de Form -->
 </div>
 
 
-<div class="modal fade ng-scope" id="demo-default-modal" role="dialog" tabindex="-1" aria-labelledby="demo-default-modal" aria-hidden="true" style="display: none;" data-backdrop="static" cg-busy="{promise:promise,message:message2}">
+<!--div class="modal fade ng-scope" id="demo-default-modal" role="dialog" tabindex="-1" aria-labelledby="demo-default-modal" aria-hidden="true" style="display: none;" data-backdrop="static" cg-busy="{promise:promise,message:message2}">
     <div class="modal-dialog">
         <div class="modal-content">
-            <!--Modal header-->
+            <!--Modal header- ->
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
-                <h4 class="modal-title">Selecciona el banco a pagar</h4>
+                <h4 class="modal-title">Detalles del Documento </h4>
             </div>
 
-            <!--Modal body-->
-            <div class="modal-body" style="min-height: 380px">
-                <label class="col-md-3 control-label">Bancos</label>
+            <!--Modal body- ->
+            <div class="modal-body" style="min-height: 350px">
+                <div class="form-group pad-ver">
+                    <div class="col-md-9">
+                        <label class="control-label">Serie: {{facturaSerie}} </label>
+                    </div>
+                    <div class="col-md-9">
+                        <label class="control-label">Folio: {{facturaFolio}} </label>
+                    </div>
+                    <div class="col-md-9">
+                        <label class="control-label">Referencia: {{referencia}}</label>
+                    </div>
+                </div>
+                <br/>
+                <div class="col-md-12">
+                <h5 class="modal-title">Selecciona el banco a pagar </h5>
+                </div>
                 <div class="form-group pad-ver">
                     <div class="col-md-9">
                         <div class="radio">
                             <input id="demo-form-radio" class="magic-radio" type="radio" name="form-radio-button" value="1" ng-model="idBanco">
                             <label for="demo-form-radio"></label>
-                            <img class="image-responsive" src="image/bancomer.jpg" alt="image" style="with:15px; height:50px; margin-top: 13px; margin-left:10px">
-                            <hr>
+                            <img class="image-responsive" src="image/bancomer.jpg" alt="image" style="with:12px; height:40px; margin-top: 13px; margin-left:10px">
                         </div>
                         <div class="radio">
                             <input id="demo-form-radio2" class="magic-radio" type="radio" name="form-radio-button" value="2" ng-model="idBanco">
                             <label for="demo-form-radio2"></label>
-                            <img class="image-responsive" src="image/banorte.jpg" alt="image" style="with:20px; height:60px; margin-top: 5px; margin-left:10px">
-                            <hr>
+                            <img class="image-responsive" src="image/banorte.jpg" alt="image" style="with:18px; height:45px; margin-top: 5px; margin-left:10px">
                         </div>
                         <div class="radio">
                             <input id="demo-form-radio3" class="magic-radio" type="radio" name="form-radio-button" value="3" ng-model="idBanco">
                             <label for="demo-form-radio3"></label>
-                            <img class="image-responsive" src="image/scotiabank.jpg" alt="image" style="with:20px; height:55px; margin-top: 5px; margin-left:10px">
-                            <hr>
+                            <img class="image-responsive" src="image/scotiabank.jpg" alt="image" style="with:18px; height:45px; margin-top: 5px; margin-left:10px">
                         </div>
                     </div>
                 </div>
             </div>
-            <!--Modal footer-->
+            <!--Modal footer- ->
             <div class="modal-footer">
                 <button data-dismiss="modal" class="btn btn-default" type="button">Cerrar</button>
                 <button class="btn btn-primary" ng-click="generarPdf(idBanco)">Imprimir</button>
+            </div>
+        </div>
+    </div>
+</div-->
+
+
+
+
+<div class="modal fade" id="demo-default-modal" tabindex="-1" role="dialog" aria-labelledby="payInvoceModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <!--h1 class="pull-right">{{invoce.importe |currency}}</h1-->
+                <h2 class="modal-title" id="payInvoceModalLabel">Factura {{facturaSerie}}{{facturaFolio}}</h2>
+                <!--h3>Pagar antes de: {{invoce.fechaVencimiento | date:"dd/MM/yyyy" }} </h3-->
+            </div>
+            <div class="modal-body">
+                <div ng-show="content">
+                    <form name="pendingInvoceModalForm" method="post">
+                        <!--span class="badge pull-right">{{invoce.estatus}}</span-->
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <p>
+                                    <b>Descripcion</b>
+                                </p>
+                                <p>
+                                    {{invoce.descripcion}}
+                                </p>
+                            </div>
+                            <div class="col-xs-6">
+                                <p>
+                                    <b>Departamento</b>
+                                </p>
+                                <p>
+                                    {{invoce.departamento}}
+                                </p>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+
+                            <div class="col-xs-6">
+                                <p>
+                                    <b>Fecha de emision</b>
+                                </p>
+                                <p>
+                                    {{invoce.fechaEmision | date:"dd/MM/yyyy" }}
+                                </p>
+                            </div>
+                            <div class="col-xs-6">
+                                <p>
+                                    <b>Estatus</b>
+                                </p>
+                                <p>
+                                    {{invoce.estatus}} hace {{invoce.diasCartera}}  días.
+                                </p>
+                            </div>
+                        </div>
+
+
+                        <hr>
+                        <h2>Selecciona metodo de pago</h2>
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div class="radio">
+                                    <input ng-model="payMethod" type="radio" id="radioBank" value="1" name="radioInline">
+                                    <label for="radioBank">Pago en bancos</label>
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="radio">
+                                    <input ng-model="payMethod" type="radio" id="radioReference" value="2" name="radioInline">
+                                    <label for="radioReference">Linea de captura</label>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div ng-show="payMethod">
+                            <hr>
+                            <h2>Selecciona banco para pagar</h2>
+                            <div class="cc-selector">
+                                <div ng-show="bank.disponible == 3 || payMethod == 1 && bank.disponible ==2 || payMethod == 2 && bank.disponible ==1 " ng-repeat="bank in banks">
+                                    <a ng-click="payInvoce(invoce.folio,bank.idBanco,invoce.idEmpresa)" class="bank-cc {{bank.nombre | lowercase}}"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div style="height:530px" id="pdfReferenceContent" ng-show="!content">
+
+                </div>
             </div>
         </div>
     </div>
