--- a/app/static/AngularJS/Templates/reference.html
+++ b/app/static/AngularJS/Templates/reference.html
@@ -1,6 +1,6 @@
 <div ng-init="init()" cg-busy="{promise:promise,message:message}">
     <div id="page-title">
-        <h4 class="page-header text-overflow ng-binding">{{nombreEmpresa}} <span ng-show="idSucursal != null" class="ng-binding ng-hide">/ {{nombreSucursal}}  </span><span ng-show="idDepartamento != null" class="ng-binding ng-hide">/ {{nombreDepartamento}} </span> </h4>
+        <h4 class="page-header text-overflow ng-binding">{{nombreEmpresa}} <span ng-show="idSucursal != null" class="ng-binding ng-hide">/ {{nombreSucursal}}  </span><span ng-show="idDepartamento != null" class="ng-binding ng-hide">/ {{empleado}} </span> </h4>
     </div>
 
     <!-- Panel para combo box filtros de empresa, sucursal y departamento  -->
