--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -66,7 +66,7 @@
     width: 100%;
     display: block;
     margin: 6px 0;">
-        [[result.REFERENCIA]]
+        {{referencia}}
       </span>
     </div>
   </div>
@@ -100,7 +100,7 @@
       width: 100%;
       display: block;
       margin: 6px 0;">
-          [[result.REFERENCIA]]
+          {{referencia}}
         </span>
       </div>
     </div>
