--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -135,6 +135,7 @@
                         <table id="tblClient" class="table table-striped table-bordered table-hover">
                             <thead>
                                 <tr>
+                                    <th>ID Cliente</th>
                                     <th>Nombre</th>
                                     <th>Rfc</th>
                                     <th>Colonia</th>
@@ -145,6 +146,7 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="lCliente in lstClient">
+                                    <td>{{lCliente.idCliente}}</td>
                                     <td>{{lCliente.nombre}}</td>
                                     <td>{{lCliente.rfc}}</td>
                                     <td>{{lCliente.colonia}}</td>
@@ -205,7 +207,7 @@
                     <br>
                     <div class="col-sm-12">
                         <!-- tabs inicio-->
-                        <ul class="nav nav-tabs ">
+                        <ul class="nav nav-pills newcolor">
                             <li ng-class="panels[0].className" ng-click="setActiveClass(panels[0])"><a href="#">{{panels[0].name}}</a></li>
                             <li ng-class="panels[1].className" ng-click="setActiveClass(panels[1])"><a href="#">{{panels[1].name}}</a></li>
                             <li ng-class="panels[2].className" ng-click="setActiveClass(panels[2])"><a href="#">{{panels[2].name}}</a></li>
@@ -220,14 +222,15 @@
                                     <table id="tblFactura" class="table table-striped table-bordered table-hover">
                                         <thead>
                                             <tr>
-                                                <th>Id Documento</th>
+                                                <th>ID Documento</th>
                                                 <th>Nombre Sucursal</th>
-                                                <th>Origen Movimiento</th>
+                                                <th>Departamento</th>
+                                                <th>ID Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Importe</th>
                                                 <th>Saldo</th>
                                                 <th>Fecha</th>
-                                                <th></th>
+                                                <th>Generar Referencia</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -235,12 +238,13 @@
                                                 <td>{{fact.idDocumento}}</td>
                                                 <td>{{fact.nombreSucursal}}</td>
                                                 <td>{{fact.origenMovimiento}}</td>
+                                                <td>{{fact.idCliente}}</td>
                                                 <td>{{fact.nombreCliente}}</td>
                                                 <td>{{fact.importe}}</td>
                                                 <td>{{fact.saldo}}</td>
                                                 <td>{{fact.fecha}}</td>
                                                 <td>
-                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(fact)"><span class="glyphicon glyphicon-th-list"> </span></button>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(fact)"><span class="glyphicon glyphicon-share"> </span></button>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -262,11 +266,12 @@
                                                 <th>Id Documento</th>
                                                 <th>Nombre Sucursal</th>
                                                 <th>Nombre Departamento</th>
+                                                <th>ID Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Importe</th>
                                                 <th>Fecha</th>
                                                 <th>Referencia</th>
-                                                <th></th>
+                                                <th>Generar Referencia</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -274,12 +279,13 @@
                                                 <td>{{pedido.idDocumento}}</td>
                                                 <td>{{pedido.nombreSucursal}}</td>
                                                 <td>{{pedido.nombreDepartamento}}</td>
+                                                <td>{{pedido.idCliente}}</td>
                                                 <td>{{pedido.nombreCliente}}</td>
                                                 <td>{{pedido.saldo}}</td>
                                                 <td>{{pedido.fecha}}</td>
                                                 <td>{{pedido.referencia}}</td>
                                                 <td>
-                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(pedido)"><span class="glyphicon glyphicon-th-list"> </span></button>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(pedido)"><span class="glyphicon glyphicon-share"> </span></button>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -302,10 +308,11 @@
                                                 <th>Nombre Sucursal</th>
                                                 <th>Nombre Departamento</th>
                                                 <th>Importe</th>
+                                                <th>ID Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Fecha</th>
                                                 <th>Referencia</th>
-                                                <th></th>
+                                                <th>Generar Referencia</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -314,11 +321,12 @@
                                                 <td>{{cotizacion.nombreSucursal}}</td>
                                                 <td>{{cotizacion.nombreDepartamento}}</td>
                                                 <td>{{cotizacion.saldo | currency:"$":2}}</td>
+                                                <td>{{cotizacion.idCliente}}</td>
                                                 <td>{{cotizacion.nombreCliente}}</td>
                                                 <td>{{cotizacion.fecha}}</td>
                                                 <td>{{cotizacion.referencia}}</td>
                                                 <td>
-                                                    <button class="btn btn-default btn-icon btn-circle" style="margin-left:10%;" data-toggle="modal" data-target="#myModal" ng-click="generateReference(cotizacion)"><span class="glyphicon glyphicon-th-list"> </span></button>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(cotizacion)"><span class="glyphicon glyphicon-share"> </span></button>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -347,6 +355,18 @@
                 <h4 class="modal-title">Documento {{cotizacionDetalle.tipoDocumento}}   {{cotizacionDetalle.idDocumento}}</h4>
             </div>
             <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>
+                            <b>Empresa</b>
+                        </p>
+                        <p>
+                            {{nombreEmpresa}}
+                        </p>
+                    </div>
+                    <div class="col-sm-6">
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-sm-6">
                         <p>
@@ -385,13 +405,13 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
+                        <input type="image" src="/image/banamex_logo.jpg" alt="Submit" style="width:140px;">
+                    </div>
+                    <div class="col-sm-4">
                         <input type="image" src="/image/bancomer.jpg" alt="Submit" style="width:140px;">
                     </div>
                     <div class="col-sm-4">
-                        <input type="image" src="/image/banorte.jpg" alt="Submit" style="width:140px;">
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="image" src="/image/scotiabank.jpg" alt="Submit" style="width:140px;">
+                        <input type="image" src="/image/santander_logo.jpg" alt="Submit" style="width:140px;">
                     </div>
                 </div>
             </div>
