--- a/app/static/css/bootstrap.css
+++ b/app/static/css/bootstrap.css
@@ -2324,7 +2324,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #00CDAC;
+  background-color: #2D3E5B;
   color:#fff;
 }
 table col[class*="col-"] {
@@ -3061,7 +3061,7 @@ fieldset[disabled] a.btn {
 }
 .btn-default {
   color: #fff;
-  background-color: #00CDAC;
+  background-color: #2D3E5B;
   border-color: #02AAB0;
 }
 .btn-default:focus,
@@ -3073,7 +3073,7 @@ fieldset[disabled] a.btn {
 .btn-default:hover {
   color: #333;
   background-color: #fff;
-  border-color: #00CDAC;
+  border-color: #2D3E5B;
 }
 .btn-default:active,
 .btn-default.active,
@@ -4776,7 +4776,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #00CDAC;
+  color: #2D3E5B;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4797,7 +4797,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 3;
-  color: #00CDAC;
+  color: #2D3E5B;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4810,8 +4810,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #00CDAC;
-  border-color: #00CDAC;
+  background-color: #2D3E5B;
+  border-color: #2D3E5B;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -5985,7 +5985,7 @@ button.close {
   min-height: 16.42857143px;
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
-  background-color: #00CDAC;
+  background-color: #2D3E5B;
   color:#fff;
 }
 .modal-header .close {
