--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -8,7 +8,7 @@
 
 <body style="font-size:10px; margin: 0;padding: 30px;">
   <div style="text-align:center;">
-    <img src="/images/logoA.png" alt="" style="height: 60px;">
+    <img src="/images/logoa.png" alt="" style="height: 60px;">
   </div>
   <div style="background-color: blue; margin:0px -30px; height:14px;">
   </div>
@@ -66,7 +66,7 @@
     width: 100%;
     display: block;
     margin: 6px 0;">
-        [[result.REFERENCIA]]
+        {{referencia}}
       </span>
     </div>
   </div>
@@ -100,7 +100,7 @@
       width: 100%;
       display: block;
       margin: 6px 0;">
-          [[result.REFERENCIA]]
+          {{referencia}}
         </span>
       </div>
     </div>
