--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -109,6 +109,7 @@
                 <ul class="dropdown-menu">
                     <li><a ng-click="setSearchType(1)">ID Cliente</a></li>
                     <li><a ng-click="setSearchType(2)">Nombre</a></li>
+                    <li><a ng-click="setSearchType(3)">ID Doc</a></li>
                 </ul>
             </div>
             <div class="lineal">
