--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -406,7 +406,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row">
+               <!--  <div class="row">
                     <div class="col-sm-4">
                         <input type="image" src="/image/banamex_logo.jpg" alt="Submit" style="width:140px;">
                     </div>
@@ -416,7 +416,7 @@
                     <div class="col-sm-4">
                         <input type="image" src="/image/santander_logo.jpg" alt="Submit" style="width:140px;">
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="modal-footer">
                 <div class="row">
