--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -8,7 +8,7 @@
 
 <body style="font-size:10px; margin: 0;padding: 30px;">
   <div style="text-align:center;">
-    <img src="logoa.png" alt="" style="height: 60px;">
+   <img src="\images\logoa.png" alt="" style="height: 60px;">
   </div>
   <div style="background-color: blue; margin:0px -30px; height:14px;">
   </div>
@@ -30,7 +30,7 @@
     </div>
     <div class="">
       <div style="display:inline-block; width:48%; height:100px; padding: 4px 8px; box-sizing: border-box;">
-        Empresa: {{nombreEmpresa}}
+        Empresa: {{query.emp_nombre}}
         <BR/>
         Cliente: {{nombreCliente}}
         <BR/>
@@ -89,11 +89,9 @@
   </div>
   <br>
   <div class="">
-    <div style="box-sizing: border-box; width:48.5%; display:inline-block;">
+     <div style="box-sizing: border-box; width:48.5%; display:inline-block;">
       <div style="text-align:center;">
-        <img src="banamex_logo.jpg" alt="" style="height: 40px;"> 
-        <img src="bancomer.jpg" alt="" style="height: 40px;"> 
-        <img src="santander_logo.jpg" alt="" style="height: 40px;"> 
+        
       </div>
       <div style="display:block;  margin:4px 0px 4px 1%;  border: 2px solid blue; border-radius:12px; box-sizing: border-box;">
         <span style="border-radius: 10px 10px 0 0;background-color: blue;display:block;color:white;padding:2px 16px;">CONCEPTO DE COBRO</span>
@@ -114,11 +112,28 @@
       </div>
     </div>
     <div style="box-sizing: border-box; width:48.5%; display:inline-block;">
-
+ 
     </div>
   </div>
+   <br>
+        <br>
+        <br>
+    <div class="">
+     <div style="text-align:center;">
+      <div style="display:inline-block; width:100%;">
+          <div style="display:inline-block; width:20%">
+              <img src="\images\banamex_logo.jpg" alt="" style="height: 20px; ">
+          </div>
+          <div style="display:inline-block; width:20%">
+              <img src="\images\bancomer.jpg" alt="" style="height:20px; ">
+          </div>
+          <div style="display:inline-block; width:20%">
+              <img src="\images\santander_logo.jpg" alt="" style="height: 20px ">
+          </div>
+      </div> 
+      </div>
+    </div>
 </body>
-
 </html>
 
 
