--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -364,7 +364,7 @@
                             <b>Empresa</b>
                         </p>
                         <p>
-                            {{nombreEmpresa}}
+                            {{cotizacionDetalle.nombreEmpresa}}
                         </p>
                     </div>
                     <div class="col-sm-6">
