--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -40,10 +40,10 @@
 <br/>
          Documento: {{idDocumento}}
       </div>
-      <div style="display:inline-block; width:28%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue;">
+      <div style="display:inline-block; width:28%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue; vertical-align:top">
         Abono a  {{tipoDocumento}} Documento: {{idDocumento}}
       </div>
-      <div style="display:inline-block; width:18%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue;">
+      <div style="display:inline-block; width:18%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue; vertical-align:top">
         Monto total {{saldo}}
       </div>
     </div>
