--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -355,7 +355,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Documento    {{cotizacionDetalle.idDocumento}}</h4>
+                <h4 class="modal-title">Documento    {{cotizacionDetalle.serie}}{{cotizacionDetalle.idDocumento}}</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
