--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -309,6 +309,31 @@
                         </p>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+<div id="pnlProgress" class="progress hide-div">
+  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"> Generando PDF
+    <span class="sr-only">100% Complete</span>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
                 <!--  <div class="row">
                     <div class="col-sm-4">
                         <input type="image" src="/image/banamex_logo.jpg" alt="Submit" style="width:140px;">
@@ -347,3 +372,6 @@
         <div style="color:white;margin-left: 40%; margin-top:20px">Cargando...</div>
     </div>
 </div>
+
+
+
