--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -126,10 +126,10 @@
                                     <table id="tblFactura" class="table table-striped table-bordered table-hover">
                                         <thead>
                                             <tr>
-                                                <th>ID Documento</th>
+                                                <th>Id Documento</th>
                                                 <th>Nombre Sucursal</th>
                                                 <th>Departamento</th>
-                                                <th>ID Cliente</th>
+                                                <th>Id Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Importe</th>
                                                 <th>Saldo</th>
@@ -172,7 +172,7 @@
                                                 <th>Id Documento</th>
                                                 <th>Nombre Sucursal</th>
                                                 <th>Nombre Departamento</th>
-                                                <th>ID Cliente</th>
+                                                <th>Id Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Importe</th>
                                                 <th>Fecha</th>
@@ -214,7 +214,7 @@
                                                 <th>Nombre Sucursal</th>
                                                 <th>Nombre Departamento</th>
                                                 <th>Importe</th>
-                                                <th>ID Cliente</th>
+                                                <th>Id Cliente</th>
                                                 <th>Nombre Cliente</th>
                                                 <th>Fecha</th>
                                                 <th>Referencia</th>
