--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -18,7 +18,7 @@
       CONCEPTO DE COBRO
     </div>
     <div style="padding: 4px 8px;">
-      Referencia de pago para documento: {{serie}}{{idDocumento}}
+      Referencia de pago para documento: [[idDocumento]]
     </div>
     <div style="background-color: blue;color:white;padding:4px 8px;">
       <div style="display:inline-block; width:59%;">
@@ -30,21 +30,21 @@
     </div>
     <div class="">
       <div style="display:inline-block; width:48%; height:100px; padding: 4px 8px; box-sizing: border-box;">
-        Empresa: {{nombreEmpresa}}
+        Empresa: [[nombreEmpresa]]
         <br/>
-        Cliente: {{nombreCliente}}
+        Cliente: [[nombreCliente]]
 <br/>
-         Sucursal: {{nombreSucursal}}
+         Sucursal: [[nombreSucursal]]
 <br/>
-         Departamento: {{nombreDepartamento}}
+         Departamento: [[nombreDepartamento]]
 <br/>
-         Documento: {{serie}}{{idDocumento}}
+         Documento: [[idDocumento]]
       </div>
       <div style="display:inline-block; width:28%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue; vertical-align:top">
-        Abono a  {{tipoDocumento}} Documento: {{serie}}{{idDocumento}}
+        Abono a   Documento: [[idDocumento]]
       </div>
       <div style="display:inline-block; width:18%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid blue; vertical-align:top">
-        Monto total ${{saldo}}
+        Monto total $[[saldo]]
       </div>
     </div>
   </div>
@@ -74,8 +74,7 @@
     width: 100%;
     display: block;
     margin: 6px 0;">
-        {{referencias}}
-      </span>
+        [[referencias]]      </span>
     </div>
   </div>
   <div>
@@ -108,7 +107,7 @@
       width: 100%;
       display: block;
       margin: 6px 0;">
-          {{referencias}}
+          [[referencias]] 
         </span>
       </div>
     </div>
