--- a/app/website/views/templates/referencia.html
+++ b/app/website/views/templates/referencia.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 
-<body style="font-size:10px; margin: 0;padding: 30px;">
+<body style="font-size:10px; margin: 0;padding: 30px; font-family:Helvetica;">
   <div style="text-align:center;">
    <img src="\images\logoa.png" alt="" style="height: 60px;">
   </div>
