--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -296,7 +296,7 @@
                             </div>
                                 <div class="col-sm-8"></div>
                                 <div class="col-sm-2">
-                                    <button class="btn btn-success" type="button" data-toggle="dropdown" ng-click="generarPdfLotes()">Gerenerar Lote</button> 
+                                    <button class="btn btn-info" data-toggle="modal" data-target="#modalLotes" ng-click="detalleLotes()">Gerenerar Lote</button> 
                                 </div>
                             </div>
                         </div>
@@ -495,7 +495,9 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Documento    {{cotizacionDetalle.serie}}{{cotizacionDetalle.idDocumento}}</h4>
+                    <h4 class="modal-title" ng-show="cotizacionDetalle.tipoDocumento == 1">Factura:    {{cotizacionDetalle.serie}}{{cotizacionDetalle.idDocumento}}</h4>
+                    <h4 class="modal-title" ng-show="cotizacionDetalle.tipoDocumento == 2">Cotización: {{cotizacionDetalle.idDocumento}}</h4>
+                    <h4 class="modal-title" ng-show="cotizacionDetalle.tipoDocumento == 3">Pedido: {{cotizacionDetalle.idDocumento}}
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -586,5 +588,92 @@
                 <div class="sk-cube3 sk-cube"></div>
             </div>
             <div style="color:white;margin-left: 40%; margin-top:20px">Cargando...</div>
+        </div>
+    </div>
+
+       <!-- Modal 3 lotes -->
+    <div id="modalLotes" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" ng-show="arrayDataLot[0].idTipoDocumento == 1 ">Lote de: Facturas</h4>
+                    <h4 class="modal-title" ng-show="arrayDataLot[0].idTipoDocumento == 2">Lote de: Cotizaciones</h4>
+                    <h4 class="modal-title" ng-show="arrayDataLot[0].idTipoDocumento == 3">Lote de: Pedidos</h4>
+                </div>
+                <div class="modal-body">
+                <div class="row">
+                        <div class="col-sm-6">
+                            <p>
+                                <b>Empresa</b>
+                            </p>
+                            <p>
+                                {{arrayDataLot[0].nombreEmpresa}}
+                            </p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p>
+                                <b>Cliente</b>
+                            </p>
+                            <p>
+                                {{arrayDataLot[0].nombreCliente}}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                            <div class="col-sm-12">
+                                        <table id="tblDetalleLotes" class="table table-striped table-bordered">
+                                            <thead>
+                                                <tr>
+                                                    <th>Id Documento</th>
+                                                    <th>Nombre Sucursal</th>
+                                                    <th>Nombre Departamento</th>
+                                                    <th>Importe</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr ng-repeat="arrayDataLot in arrayDataLot">
+                                                    <td>{{arrayDataLot.folio}}</td>
+                                                    <td>{{arrayDataLot.nombreSucursal}}</td>
+                                                    <td>{{arrayDataLot.nombreDepartamento}}</td>
+                                                    <td>{{arrayDataLot.saldo| currency:"$":2}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-8">
+                        </div>
+                        <div class="col-sm-2">
+                            <p>
+                                <b>Total</b>
+                            </p>
+                        </div>
+                        <div class="col-sm-2">
+                            <p>
+                                {{arrayDataLot.saldo | currency:"$":2}}
+                            </p>
+                        </div>
+                    </div>
+                    
+                    <div id="pnlProgresso" class="progress hide-div">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"> Generando PDF
+                            <span class="sr-only">100% Complete</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal" ng-click="cerrarModalLotes()">Cerrar</button>
+                        </div>
+                        <div class="col-sm-6">
+                            <button class="btn btn-info " ng-click="generarPdfLotes()"><span class="glyphicon glyphicon-file"> </span>Generar PDF</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
