--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -646,15 +646,13 @@
                     <div class="row">
                         <div class="col-sm-8">
                         </div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-1" style="text-align:right">
                             <p>
                                 <b>Total</b>
                             </p>
                         </div>
-                        <div class="col-sm-2">
-                            <p>
-                                {{arrayDataLot.saldo | currency:"$":2}}
-                            </p>
+                        <div class="col-sm-3" style="text-align:center">
+                                &nbsp;&nbsp;{{totalPago | currency:"$":2}}
                         </div>
                     </div>
                     
