--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -284,7 +284,7 @@
                                 <!-- tabla lotes no Aplicado  FIN-->
                             </div>
                             <!-- tabContent1 Fin-->
-                            <div class="row" ng-show="individual"> 
+                            <div class="row" ng-show="individualEmpresa"> 
                                 <div class="col-sm-10"></div>
                                 <div class="col-sm-2">
                                     <button class="btn btn-default" type="button" data-toggle="dropdown" ng-click="referenceLote()">Referencia Lote</button> 
